Set env location

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
             "username": "sandbox",
             "password": "sandbox"
         }
-    ]
+    ],
+    "python.venvPath": ".venv",
 }
