--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
           "mtxr.sqltools",
           "ms-vsliveshare.vsliveshare",
           "mtxr.sqltools-driver-mysql",
+          "mtxr.sqltools-driver-pg",
           "-github.copilot",
           "-github.copilot-chat"
         ]
