--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/universal:2-linux",
+    // "image": "mcr.microsoft.com/devcontainers/universal:2-linux",
   
     "customizations": {
       "vscode": {
@@ -19,6 +19,6 @@
         ]
       }
     },
-
-    "postCreateCommand": "pip install hatch && hatch env create"
+    "build": { "dockerfile": "Dockerfile" }
+    // "postCreateCommand": "pip install hatch && hatch env create"
 }
