--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,4 +3,5 @@ FROM mcr.microsoft.com/devcontainers/universal:2-linux
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends libpq-dev postgresql-client
 
+COPY ./pyproject.toml ./pyproject.toml
 RUN pip install hatch && hatch env create
