--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,4 @@
 {
-    // "image": "mcr.microsoft.com/devcontainers/universal:2-linux",
     "initializeCommand": "docker system prune --all --force",
     "customizations": {
       "vscode": {
@@ -19,7 +18,7 @@
         ]
       }
     },
-    "build": { "dockerfile": "../Dockerfile" }
-    // "postCreateCommand": "pip install hatch && hatch env create"
-
+    "build": { "dockerfile": "Dockerfile" },
+    "postCreateCommand": "pip install hatch && hatch env create",
+    "waitFor": "postCreateCommand"
   }
