--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,19 @@
 {
     "sqltools.connections": [
         {
-            "mysqlOptions": {
-                "authProtocol": "default",
-                "enableSsl": "Disabled"
-            },
+            "ssh": "Disabled",
             "previewLimit": 50,
             "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "Main",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "Sandbox",
             "database": "sandbox",
             "username": "sandbox",
             "password": "sandbox"
         }
     ],
     "python.venvPath": "/workspaces/interview-sandbox/.venv",
-    "python.defaultInterpreterPath": "/workspaces/interview-sandbox/.venv"
+    "python.defaultInterpreterPath": "/workspaces/interview-sandbox/.venv",
+    "workbench.secondarySideBar.defaultVisibility": "hidden",
+    "chat.disableAIFeatures": true
 }
