--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ version = "0.0.1"
 dependencies = [
   "fastapi>=0.111.0",
   "pydantic-settings",
-  "psycopg[binary,pool]"
+  "psycopg[binary,pool]",
   "sqlalchemy>=2.0.30",
   "uvicorn",
 ]
