--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
 FROM mcr.microsoft.com/devcontainers/universal:2-linux
 
-RUN export DEBIAN_FRONTEND=noninteractive  && mkdir -p /usr/share/keyrings && curl -fsSL https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor -o /usr/share/keyrings/yarn-archive-keyring.gpg && echo "deb [signed-by=/usr/share/keyrings/yarn-archive-keyring.gpg] https://dl.yarnpkg.com/debian stable main" | tee /etc/apt/sources.list.d/yarn.list && apt-get update && apt-get -y install --no-install-recommends libpq-dev postgresql-client
+RUN curl -fsSL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -  && apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends libpq-dev postgresql-client
